# RobotControl2022

./: CMakeLists.txt  README.md  package.xml
launch/: rok3.launch
rok3_model/: CMakeLists.txt  model.config  model.sdf  package.xml
rok3_model/config/: joint_names_rok3_model.yaml
rok3_model/launch/: display.launch  gazebo.launch
rok3_model/meshes/: L_Ankle_roll_link.STL  L_Calf_link.STL  L_Foot.STL  L_Hip_yaw_link.STL  R_Ankle_roll_link.STL  R_Calf_link.STL  R_Foot.STL  R_Hip_yaw_link.STL  Upper_body_link.STL
rok3_model/urdf/: rok3_model.csv  rok3_model.urdf
src/: rok3_plugin.cc  rok3_plugin_1.cc
src/RBDL/addons/urdfreader/: CMakeLists.txt
worlds/: rok3.world
